# RayTracerCpp

./: .gitignore  CMakeLists.txt  README.md
res/: Test.mtl
src/: Config.cpp  Config.h  Image.cpp  Image.h  KdTree.cpp  KdTree.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  file_io.cpp  file_io.h  intersect.cpp  intersect.h  main.cpp  makefile  render.h  scene.h  types.h  vector.cpp  vector.h
